gem2deb (0.30.1) UNRELEASED; urgency=medium

  * Gem2Deb::Metadata:
    - make the workaround attempt for gemspecs using git more robust.

 -- Antonio Terceiro <terceiro@debian.org>  Thu, 17 Mar 2016 10:23:58 -0300

gem2deb (0.30) unstable; urgency=medium

  * Gem2Deb::Metadata:
    - workaround git usage in gemspecs. The fact that Debian source packages
      are *not* git repositories makes it necessary to patch upstream gemspec to
      drop usage of `git ls-files` in several packages. This change makes
      gem2deb try to override that with sane defaults for a Debian package.
      (Closes: #800933)
    - fail the build if there is a gemspec in the source package but we fail
      to load it.
  * gem2deb-test-runner: when dependency resolution is requested, fail if
    there is no working source gemspec to read the package name from.

 -- Antonio Terceiro <terceiro@debian.org>  Tue, 15 Mar 2016 13:04:26 -0300

gem2deb (0.29) unstable; urgency=medium

  * gem2tgz:
    - Stop generating metadata.yml, and generate a .gemspec if there is no
      gemspec yet.

 -- Antonio Terceiro <terceiro@debian.org>  Fri, 04 Mar 2016 18:50:17 -0300

gem2deb (0.28) unstable; urgency=medium

  * dh_ruby:
    - force generated gemspecs to have their contains file lists sorted
      to help with build reproducibility

 -- Christian Hofstaedtler <zeha@debian.org>  Fri, 04 Mar 2016 16:00:17 +0100

gem2deb (0.27) unstable; urgency=medium

  * dh-make-ruby:
    - with -w/--overwrite, never overwrite debian/copyright. It's not useful
      to replace an human-reviewed debian/copyright with a completely dumb
      boilerplate.
  * dh_ruby:
    - force generated gemspecs to use the date from debian/changelog to help
      with build reproducibility

 -- Antonio Terceiro <terceiro@debian.org>  Wed, 02 Mar 2016 17:15:19 -0300

gem2deb (0.26.2) unstable; urgency=medium

  * dh-make-ruby: bump Standards-Version in generated debian/control files to
    3.9.7